--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: reddit-background-viewer
-  description: A simple static site that displays random images from a subreddit as a full-page background.
+  description: r404
   annotations:
     backstage.io/techdocs-ref: dir:.
 spec:
